# msamtools

./: Dockerfile  LICENSE  Makefile.am  README.md  configure.ac  filterSeq.c  mBamVector.c  mBamVector.h  mCommon.c  mCommon.h  mCompress.c  mCompress.h  mDefinitions.h  mMatrix.c  mMatrix.h  mSequence.c  mSequence.h  mSimulate.c  mSimulate.h  make_readme.sh  msam.h  msam_coverage.c  msam_filter.c  msam_helper.c  msam_profile.c  msam_summary.c  msamtools.c  seqUtils.c  splitSeq.c  versions.txt  zoeTools.c  zoeTools.h
tests/: functions.sh  regression_tests.sh  tiny_aln.bam
